--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.3.1"
 coreSplashscreenVersion = "1.2.0-alpha01"
 firebaseBom = "32.8.1"
+firebaseDatabaseVersion = "19.6.0"
 gradle = "3.2.1"
 kotlin = "1.9.0"
 coreKtx = "1.12.0"
@@ -22,6 +23,7 @@ firebaseDatabase = "21.0.0"
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreenVersion" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-database-v1960 = { module = "com.google.firebase:firebase-database", version.ref = "firebaseDatabaseVersion" }
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
