--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.attendance">
+    package="com.example.attendance"
+    >
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
+
+
+
 
     <application
         android:allowBackup="true"
@@ -12,10 +21,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Attendance"
-        tools:targetApi="31">
+        tools:targetApi="31"
+
+        >
         <activity
             android:name=".MainActivity2"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".SessDetAct"
             android:exported="false" />
